Add the three pieces of legislation that go with the music
Add the basic legislation that goes with the music: The Share, Voting Rights for All, and the Fair Commerce Act.

Ended up also putting up a fair amount of Attorney General Reform, including the constitutional amendment and a landing/discussion page.

Reoorganized as lot of the directories to be more consistent.

Ran internal link checking across the whole site.

Fixed the website to scroll both the table of contents and the main content and to adapt that to a single column on phones.

--- a/404.html
+++ b/404.html
@@ -23,6 +23,6 @@ layout: default
   <p><strong>Ruh-roh. <br>Page not found :(</strong></p>
   <p>Look in the link at the top, <br> perhaps a slight change will get the right document.</p>
   <p>If that doesn't work, here is a 
-          <a href="https://github.com/ProjectLiberty2029/ProjectLiberty2029.github.io/issues", target="_blank" rel="noopener noreferrer">
+          <a href="https://github.com/ProjectLiberty2029/ProjectLiberty2029.github.io/issues" target="_blank" rel="noopener noreferrer">
             link to our issue page.</a> Please copy the URL from the page you are on, and the page you came from.</p>
 </div>
